--- a/battle.html
+++ b/battle.html
@@ -1424,8 +1424,9 @@ function showCardActions(side, idx){
               if(target.hp <= 0){
             setTimeout(() => {
               targetCardEl.classList.add('die');
-              setTimeout(()=>{
-                addToDiscardPile(target.card, 'Player');
+              setTimeout(() => { 
+                // Pass the reserveIndex when adding to discard pile
+                addToDiscardPile(target.card, 'Player', target.reserveIndex);
                 computerSlots[idx] = null;
                 renderAll();
                 checkBattleOver();
@@ -1546,7 +1547,8 @@ function showCardActions(side, idx){
           setTimeout(() => {
             targetCardEl.classList.add('die');
             setTimeout(() => { 
-              addToDiscardPile(target.card, 'Player');
+              // Pass the reserveIndex when adding to discard pile
+              addToDiscardPile(target.card, 'Player', target.reserveIndex);
               computerSlots[targetIdx] = null; 
               renderAll(); 
               checkBattleOver(); 
@@ -1572,8 +1574,9 @@ function showCardActions(side, idx){
           if(target.hp <= 0){
             setTimeout(() => {
               targetCardEl.classList.add('die');
-              setTimeout(()=>{ 
-                addToDiscardPile(target.card, 'Player');
+              setTimeout(() => { 
+                // Pass the reserveIndex when adding to discard pile
+                addToDiscardPile(target.card, 'Player', target.reserveIndex);
                 computerSlots[targetIdx] = null; 
                 renderAll(); 
                 checkBattleOver(); 
@@ -1651,8 +1654,9 @@ function showCardActions(side, idx){
         if(target.hp <= 0){
           setTimeout(() => {
             targetCardEl.classList.add('die');
-            setTimeout(()=>{
-              addToDiscardPile(target.card, 'Player');
+            setTimeout(() => { 
+              // Pass the reserveIndex when adding to discard pile
+              addToDiscardPile(target.card, 'Player', target.reserveIndex);
               computerSlots[targetIdx] = null;
               renderAll();
               checkBattleOver();
@@ -1780,7 +1784,7 @@ function showCardActions(side, idx){
     const shouldPlaceCard = Math.random() < 0.4 && computerSlots.filter(s => s).length < 4;
     if(shouldPlaceCard && computerPlaceCard()){
       // Placed a card, continue with other actions
-      setTimeout(()=> performComputerActions(), 1000);
+      setTimeout(() => performComputerActions(), 1000);
       return;
     }
     
@@ -1953,14 +1957,15 @@ function showCardActions(side, idx){
         setTimeout(() => {
           targetCardEl.classList.add('die');
           setTimeout(() => { 
-            addToDiscardPile(target.card, 'Computer');
-            playerSlots[attackerIdx] = null; 
-            renderAll(); 
-            checkBattleOver(); 
+            // Pass the reserveIndex when adding to discard pile
+            addToDiscardPile(target.card, 'Player', target.reserveIndex);
+            computerSlots[targetIdx] = null;
+            renderAll();
+            checkBattleOver();
           }, 600);
         }, 200);
       } else {
-        updateSlotUI('player', attackerIdx);
+        updateSlotUI('player', targetIdx);
         checkBattleOver();
       }
     }, finalDmg);
@@ -2653,8 +2658,21 @@ const discardPileEl = document.getElementById('discardPile');
 const discardedCardsEl = document.getElementById('discardedCards');
 const discardCountEl = document.getElementById('discardCount');
 
-function addToDiscardPile(card, owner) {
-  discardPile.push({ card, owner, timestamp: Date.now() });
+// OPTION 1: Update addToDiscardPile to store reserveIndex
+function addToDiscardPile(card, owner, reserveIndex) {
+  // Create the discard pile entry
+  const entry = { 
+    card, 
+    owner, 
+    timestamp: Date.now() 
+  };
+  
+  // Store the reserveIndex for computer cards
+  if (owner === 'Computer' && reserveIndex !== undefined) {
+    entry.reserveIndex = reserveIndex;
+  }
+  
+  discardPile.push(entry);
   renderDiscardPile();
   
   // Add visual feedback
