--- a/battle.html
+++ b/battle.html
@@ -1970,10 +1970,11 @@ function showCardActions(side, idx){
         setTimeout(() => {
           targetCardEl.classList.add('die');
           setTimeout(() => { 
-            addToDiscardPile(target.card, 'Computer');
-            playerSlots[attackerIdx] = null; // Use correct index
-            renderAll();
-            checkBattleOver();
+            // Pass the reserveIndex when adding to discard pile
+            addToDiscardPile(target.card, 'Player', target.reserveIndex);
+            computerSlots[targetIdx] = null; 
+            renderAll(); 
+            checkBattleOver(); 
           }, 600);
         }, 200);
       } else {
@@ -2144,7 +2145,7 @@ function showCardActions(side, idx){
               if(cardEl) cardEl.classList.add('die');
               setTimeout(()=>{ 
                 // Add to discard pile with the correct owner
-                addToDiscardPile(slot.card, side === 'player' ? 'Computer' : 'Player');
+                addToDiscardPile(slot.card, side === 'player' ? 'Computer' : 'Player', slot.reserveIndex);
                 slots[idx] = null; renderAll(); checkBattleOver(); },600);
             },400);
             return false; // remove effect (card dead)
@@ -2684,13 +2685,9 @@ function addToDiscardPile(card, owner, reserveIndex) {
   const entry = { 
     card, 
     owner, 
-    timestamp: Date.now() 
+    timestamp: Date.now(),
+    reserveIndex // Always store reserveIndex regardless of owner
   };
-  
-  // Store the reserveIndex for computer cards
-  if (owner === 'Computer' && reserveIndex !== undefined) {
-    entry.reserveIndex = reserveIndex;
-  }
   
   discardPile.push(entry);
   renderDiscardPile();
