--- a/battle.html
+++ b/battle.html
@@ -1425,7 +1425,7 @@ function showCardActions(side, idx){
             setTimeout(() => {
               targetCardEl.classList.add('die');
               setTimeout(()=>{
-                addToDiscardPile(target.card, 'Player');
+                addToDiscardPile(target.card, 'Computer');
                 computerSlots[idx] = null;
                 renderAll();
                 checkBattleOver();
@@ -1546,7 +1546,7 @@ function showCardActions(side, idx){
           setTimeout(() => {
             targetCardEl.classList.add('die');
             setTimeout(() => { 
-              addToDiscardPile(target.card, 'Player');
+              addToDiscardPile(target.card, 'Computer');
               computerSlots[targetIdx] = null; 
               renderAll(); 
               checkBattleOver(); 
@@ -1573,7 +1573,7 @@ function showCardActions(side, idx){
             setTimeout(() => {
               targetCardEl.classList.add('die');
               setTimeout(()=>{ 
-                addToDiscardPile(target.card, 'Player');
+                addToDiscardPile(target.card, 'Computer');
                 computerSlots[targetIdx] = null; 
                 renderAll(); 
                 checkBattleOver(); 
@@ -1652,7 +1652,7 @@ function showCardActions(side, idx){
           setTimeout(() => {
             targetCardEl.classList.add('die');
             setTimeout(()=>{
-              addToDiscardPile(target.card, 'Player');
+              addToDiscardPile(target.card, 'Computer');
               computerSlots[targetIdx] = null;
               renderAll();
               checkBattleOver();
