--- a/battle.html
+++ b/battle.html
@@ -3031,6 +3031,58 @@ addTouchHoldListeners();
   opacity: 0.5 !important;
   filter: grayscale(0.6) !important;
 }
+/* Mobile-specific repositioning for the discard pile */
+@media (max-width: 768px) {
+  .discard-pile {
+    bottom: 0 !important; /* Align with bottom of screen */
+    right: 0 !important; /* Align with right edge */
+    width: 120px !important; /* Narrower to fit beside log */
+    max-height: 120px !important; /* Match log height */
+    padding: 6px !important;
+    z-index: 40 !important; /* Same z-index as log */
+    border-top: 2px solid #ff4444 !important;
+    border-left: 2px solid #ff4444 !important;
+    border-right: none !important;
+    border-bottom: none !important;
+    border-radius: 0 !important; /* Square corners on mobile */
+  }
+  
+  /* Move log to take up only part of bottom screen width */
+  .log {
+    width: calc(100% - 120px) !important; /* Full width minus discard pile width */
+  }
+  
+  /* Smaller cards in discard pile */
+  .discard-pile .mini-card {
+    width: 24px !important;
+    height: 32px !important;
+  }
+  
+  /* Compact header in discard pile */
+  .discard-pile .title {
+    font-size: 9px !important;
+    margin-bottom: 4px !important;
+    padding-bottom: 4px !important;
+  }
+  
+  /* Smaller count text */
+  .discard-pile .count {
+    font-size: 7px !important;
+    margin-top: 4px !important;
+    padding-top: 4px !important;
+  }
+}
+
+/* Additional adjustment for very small screens */
+@media (max-width: 480px) {
+  .discard-pile {
+    width: 100px !important;
+  }
+  
+  .log {
+    width: calc(100% - 100px) !important;
+  }
+}
 </style>
 </body>
 </html>
