--- a/battle.html
+++ b/battle.html
@@ -3031,56 +3031,33 @@ addTouchHoldListeners();
   opacity: 0.5 !important;
   filter: grayscale(0.6) !important;
 }
-/* Mobile-specific repositioning for the discard pile */
+/* Fix for graveyard alignment with log box */
 @media (max-width: 768px) {
+  /* Position the discard pile directly next to the log */
   .discard-pile {
-    bottom: 0 !important; /* Align with bottom of screen */
-    right: 0 !important; /* Align with right edge */
-    width: 120px !important; /* Narrower to fit beside log */
-    max-height: 120px !important; /* Match log height */
+    position: fixed !important;
+    bottom: 0 !important;
+    right: 0 !important;
+    width: 120px !important;
+    height: 120px !important;  /* Match log height exactly */
+    max-height: 120px !important;
     padding: 6px !important;
-    z-index: 40 !important; /* Same z-index as log */
+    margin: 0 !important;
+    border-radius: 0 !important;
+    z-index: 40 !important;  /* Same z-index as log for proper layering */
+    
+    /* Fix styling to match with log */
+    border: none !important;
     border-top: 2px solid #ff4444 !important;
     border-left: 2px solid #ff4444 !important;
-    border-right: none !important;
-    border-bottom: none !important;
-    border-radius: 0 !important; /* Square corners on mobile */
+    box-sizing: border-box !important;
   }
   
-  /* Move log to take up only part of bottom screen width */
+  /* Ensure log and discard pile align perfectly */
   .log {
-    width: calc(100% - 120px) !important; /* Full width minus discard pile width */
-  }
-  
-  /* Smaller cards in discard pile */
-  .discard-pile .mini-card {
-    width: 24px !important;
-    height: 32px !important;
-  }
-  
-  /* Compact header in discard pile */
-  .discard-pile .title {
-    font-size: 9px !important;
-    margin-bottom: 4px !important;
-    padding-bottom: 4px !important;
-  }
-  
-  /* Smaller count text */
-  .discard-pile .count {
-    font-size: 7px !important;
-    margin-top: 4px !important;
-    padding-top: 4px !important;
-  }
-}
-
-/* Additional adjustment for very small screens */
-@media (max-width: 480px) {
-  .discard-pile {
-    width: 100px !important;
-  }
-  
-  .log {
-    width: calc(100% - 100px) !important;
+    width: calc(100% - 120px) !important;
+    right: 120px !important;
+    left: 0 !important;
   }
 }
 </style>
