--- a/battle.html
+++ b/battle.html
@@ -186,6 +186,7 @@ html,body{
   z-index: 60;
   display: flex;
   flex-direction: column;
+  position: relative; /* Added for positioning graveyard */
 }
 
 .log .entry{
@@ -301,7 +302,7 @@ html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monosp
 .seg{flex:1;height:14px;background:#fff;border-radius:2px;opacity:1;box-sizing;border-box;position:relative}
 .seg.half::after{content:'';position:absolute;left:0;top:0;bottom:0;width:50%;background:#111}
 .hand{display:flex;gap:10px;flex-wrap:wrap;justify-content:center;align-items:center;flex:1;min-height:140px}
-/* battlefield slots */
+ /* battlefield slots */
 .slots{display:flex;gap:10px;align-items:center;justify-content:center}
 .slot{width:90px;height:130px;border:2px dashed rgba(255,255,255,0.25);border-radius:8px;background:rgba(0,0,0,0.25);display:flex;align-items:center;justify-content:center;position:relative}
 .slot.occupied{border-style:solid}
@@ -312,7 +313,7 @@ html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monosp
 .card.used{opacity:0.4;filter:grayscale(0.7)}
 .card.used::after{content:'USED';position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);background:rgba(0,0,0,0.8);color:#fff;padding:2px 6px;font-size:8px;border-radius:3px;pointer-events:none}
  /* action panel - now positioned relative to selected card */
-.card-action-panel{position:absolute;z-index:100;background:rgba(0,0,0,0.9);border:2px solid var(--accent);border-radius:6px;padding:8px;display:flex;gap:8px;flex-direction:column;min-width:120px}
+.card-action-panel{position:absolute;z-index=100;background:rgba(0,0,0,0.9);border:2px solid var(--accent);border-radius:6px;padding:8px;display:flex;gap:8px;flex-direction:column;min-width:120px}
 .card-action-panel .btn{background:#fff;color:#000;border:2px solid #000;padding:6px 12px;font-family:'Press Start 2P',monospace;font-size:9px;cursor:pointer;text-align:center}
 .card-action-panel .btn:hover{background:var(--accent);color:#000}
 .card-action-panel .btn:active{transform:scale(.98)}
@@ -525,10 +526,8 @@ html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monosp
   pointer-events: none;
 }
   .discard-pile {
-  position: fixed;
-  bottom: 160px;
-  right: 20px;
-  width: 160px;
+  /* Removed fixed positioning for desktop */
+  width: calc(100% - 20px); /* Match log padding */
   background: rgba(0,0,0,0.9);
   border: 3px solid #ff4444;
   border-radius: 8px;
@@ -536,6 +535,7 @@ html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monosp
   z-index: 55;
   max-height: 220px;
   overflow-y: auto;
+  margin-top: auto; /* Pushes to the bottom of the log */
 }
 
 .discard-pile .title {
@@ -673,10 +673,11 @@ html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monosp
   /* Allow scrolling on mobile */
 
   .discard-pile {
-    bottom: 250px !important;
+    position: absolute !important;
+    bottom: 10px !important;
     right: 10px !important;
     width: 130px !important;
-    max-height: 180px !important;
+    max-height: 100px !important; /* Fit inside the log */
     padding: 8px !important;
   }
   
@@ -813,7 +814,8 @@ html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monosp
     font-size: 9px !important;
     z-index: 40 !important;
     border-radius: 0 !important;
-    overflow-y: auto !important;
+    overflow-y: hidden !important; /* Hide scroll on main log */
+    overflow-x: hidden !important;
   }
   
   .log .entry { 
@@ -1014,6 +1016,12 @@ html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monosp
       <!-- Integrated log panel -->
       <div class="log" id="battleLog">
         <div class="entry system">Battle ready – place cards to begin.</div>
+        <!-- Discard pile -->
+        <div class="discard-pile" id="discardPile">
+          <div class="title">💀 GRAVEYARD</div>
+          <div class="discarded-cards" id="discardedCards"></div>
+          <div class="count" id="discardCount">0 defeated</div>
+        </div>
       </div>
     </div>  <!-- Close game-container div -->
 
@@ -1022,12 +1030,7 @@ html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monosp
       <div class="btn" id="endTurnBtn">END TURN</div>
     </div>
   </div  <!-- Close wrap div -->
-  <!-- Discard pile -->
-    <div class="discard-pile" id="discardPile">
-      <div class="title">💀 GRAVEYARD</div>
-      <div class="discarded-cards" id="discardedCards"></div>
-      <div class="count" id="discardCount">0 defeated</div>
-    </div>
+  
 
 <script>
 (function(){
@@ -1318,7 +1321,7 @@ function renderHand(side) {
 
   const stats = document.createElement('div');
   stats.className = 'stats';
-  stats.innerHTML = `
+  stats.innerHTML = `<
     <div style="font-size:10px">${card.name}</div>
     <div style="font-size:10px">HP:${card.hp}</div>
   `;
@@ -1399,7 +1402,7 @@ function renderHand(side) {
     });
   }
 
-// Add this check at the beginning of showCardActions
+  // Add this check at the beginning of showCardActions
 function showCardActions(side, idx){
   if(side !== 'player' || !playerTurn) return;
   
@@ -1504,13 +1507,14 @@ function showCardActions(side, idx){
                 targetCardEl.classList.remove('hit', 'flash');
               }, 400);
               
+
               target.hp = Math.max(0, target.hp - damageToApply);
               addLog('player', `${slot.card.name} uses ${attack.name} on ${target.card.name} for ${damageToApply} damage`);
               
               if(target.hp <= 0){
             setTimeout(() => {
               targetCardEl.classList.add('die');
-              setTimeout(()=>{
+              setTimeout(()=>{ 
                 addToDiscardPile(target.card, 'Computer');
                 computerSlots[idx] = null;
                 renderAll();
@@ -2222,6 +2226,15 @@ function showCardActions(side, idx){
         // Decrement duration
         effect.turnsRemaining--;
         if(effect.turnsRemaining <= 0){
+
+          // If the effect is weaken, also reset the attack power
+          if(effect.type === 'weaken' && slot.card.attacks) {
+            slot.card.attacks.forEach(attack => {
+              attack.damage = attack.baseDamage; // Reset to base damage
+            });
+            addLog('system', `${slot.card.name} regains full attack power!`);
+          }
+
           const expiredMessages = {
             stun: `${slot.card.name} is no longer stunned!`,
             sleep: `${slot.card.name} wakes up!`,
@@ -2610,8 +2623,7 @@ function updateCardHPBar(hpBarElement, currentHP, maxHP) {
           defending: false, 
           used: false, 
           statusEffects: [],
-          attackCooldowns: attackCooldowns,
-          reserveIndex: i // Track which reserve index this came from
+          attackCooldowns: attackCooldowns 
         };
       }
     });
@@ -2734,6 +2746,7 @@ function updateCardHPBar(hpBarElement, currentHP, maxHP) {
       clearSelections();
     }
   });
+  
 // Discard pile management
 const discardPile = [];
 const discardPileEl = document.getElementById('discardPile');
