--- a/battle.html
+++ b/battle.html
@@ -173,10 +173,19 @@ html,body{
   z-index: 999 !important;
 }
 
+/* New Log & Graveyard Container */
+.log-container {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  height: 100%;
+  gap: 16px;
+}
+
 /* Integrated log panel */
 .log{
-  width: 300px; /* Wider log */
-  height: 100%;
+  flex: 1; /* Allow log to grow */
+  width: 100%; /* Take full width of container */
   background: rgba(0,0,0,0.8);
   border: 2px solid #fff;
   border-radius: 12px;
@@ -186,7 +195,7 @@ html,body{
   z-index: 60;
   display: flex;
   flex-direction: column;
-  position: relative; /* Added for positioning graveyard */
+  /* Removed height, position, and wider log comment */
 }
 
 .log .entry{
@@ -315,9 +324,6 @@ html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monosp
  /* action panel - now positioned relative to selected card */
 .card-action-panel{position:absolute;z-index=100;background:rgba(0,0,0,0.9);border:2px solid var(--accent);border-radius:6px;padding:8px;display:flex;gap:8px;flex-direction:column;min-width:120px}
 .card-action-panel .btn{background:#fff;color:#000;border:2px solid #000;padding:6px 12px;font-family:'Press Start 2P',monospace;font-size:9px;cursor:pointer;text-align:center}
-.card-action-panel .btn:hover{background:var(--accent);color:#000}
-.card-action-panel .btn:active{transform:scale(.98)}
-.card-action-panel .btn.disabled{background:#666;color:#333;cursor:not-allowed}
  /* turn control panel */
 .turn-panel{position:fixed;left:50%;transform:translateX(-50%);bottom=22px;display:flex;gap:12px;z-index:50}
 .btn{background:#fff;color:#000;border:2px solid #000;padding:10px 16px;font-family:'Press Start 2P',monospace;font-size:11px;cursor:pointer}
@@ -526,16 +532,16 @@ html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monosp
   pointer-events: none;
 }
   .discard-pile {
-  /* Removed fixed positioning for desktop */
-  width: calc(100% - 20px); /* Match log padding */
+  width: 100%; /* Match container width */
   background: rgba(0,0,0,0.9);
   border: 3px solid #ff4444;
   border-radius: 8px;
   padding: 10px;
   z-index: 55;
-  max-height: 220px;
+  max-height: 240px; /* Define its own max-height */
   overflow-y: auto;
-  margin-top: auto; /* Pushes to the bottom of the log */
+  /* Removed all positioning and margin styles */
+  box-sizing: border-box; /* Ensure padding is included */
 }
 
 .discard-pile .title {
@@ -673,12 +679,13 @@ html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monosp
   /* Allow scrolling on mobile */
 
   .discard-pile {
-    position: absolute !important;
-    bottom: 10px !important;
-    right: 10px !important;
-    width: 130px !important;
-    max-height: 100px !important; /* Fit inside the log */
-    padding: 8px !important;
+    flex-basis: 140px; /* Set a base width */
+    flex-shrink: 0; /* Prevent shrinking */
+    height: 100% !important; /* Match log container height */
+    max-height: none !important; /* Override desktop max-height */
+    border-radius: 0 !important;
+    border: none !important;
+    border-left: 2px solid #fff !important;
   }
   
   .discard-pile .mini-card {
@@ -798,8 +805,8 @@ html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monosp
     top: -12px !important;
   }
   
-  /* Mobile log - bottom overlay instead of right side */
-  .log { 
+  /* Mobile log container - bottom overlay */
+  .log-container {
     position: fixed !important;
     bottom: 0 !important;
     right: 0 !important;
@@ -807,15 +814,22 @@ html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monosp
     top: auto !important;
     width: 100% !important;
     height: 120px !important;
+    z-index: 40 !important;
+    flex-direction: row !important; /* Arrange side-by-side */
+    gap: 0 !important;
+  }
+
+  /* Mobile log - occupies remaining space */
+  .log { 
+    flex: 1 !important; /* Takes up remaining space */
+    height: 100% !important;
     background: rgba(0,0,0,0.9) !important;
     border: none !important;
     border-top: 2px solid #fff !important;
     padding: 6px !important;
     font-size: 9px !important;
-    z-index: 40 !important;
     border-radius: 0 !important;
-    overflow-y: hidden !important; /* Hide scroll on main log */
-    overflow-x: hidden !important;
+    overflow-y: auto !important;
   }
   
   .log .entry { 
@@ -1013,10 +1027,11 @@ html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monosp
         </div>
       </div>  <!-- Close arena div -->
 
-      <!-- Integrated log panel -->
-      <div class="log" id="battleLog">
-        <div class="entry system">Battle ready – place cards to begin.</div>
-        <!-- Discard pile -->
+      <!-- New container for log and graveyard -->
+      <div class="log-container">
+        <div class="log" id="battleLog">
+          <div class="entry system">Battle ready – place cards to begin.</div>
+        </div>
         <div class="discard-pile" id="discardPile">
           <div class="title">💀 GRAVEYARD</div>
           <div class="discarded-cards" id="discardedCards"></div>
@@ -1741,9 +1756,9 @@ function showCardActions(side, idx){
         if(target.hp <= 0){
           setTimeout(() => {
             targetCardEl.classList.add('die');
-            setTimeout(()=>{
+            setTimeout(()=>{ 
               addToDiscardPile(target.card, 'Computer');
-              computerSlots[targetIdx] = null;
+              playerSlots[attackerIdx] = null;
               renderAll();
               checkBattleOver();
             }, 600);
@@ -1821,6 +1836,7 @@ function showCardActions(side, idx){
     });
     
     setTimeout(()=>{
+
       // Process status effects on computer cards FIRST
       processStatusEffects('computer');
       
@@ -2198,6 +2214,7 @@ function showCardActions(side, idx){
     const slots = side === 'player' ? playerSlots : computerSlots;
     const slotsEl = side === 'player' ? playerSlotsEl : computerSlotsEl;
     slots.forEach((slot, idx)=>{
+
       if(!slot || !slot.statusEffects) return;
       slot.statusEffects = slot.statusEffects.filter(effect=>{
         // Skip processing on the same turn it was applied
@@ -2212,7 +2229,7 @@ function showCardActions(side, idx){
           if(slot.hp <= 0){
             addLog('system', `${slot.card.name} dies from poison!`);
             const parentEl = slotsEl.children[idx];
-            setTimeout(()=>{
+            setTimeout(()=>{ 
               const cardEl = parentEl && parentEl.querySelector('.card');
               if(cardEl) cardEl.classList.add('die');
               setTimeout(()=>{ 
