--- a/battle.html
+++ b/battle.html
@@ -679,16 +679,17 @@ html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monosp
   bottom: 0px !important; /* Sits on top of log */
   left: 0 !important;
   right: 0 !important;
-  width: 100% !important;
+  width: 90% !important;
   height: 70px !important;
   max-height: 70px !important;
   padding: 6px !important;
   border-bottom: none !important;
   border-top: 2px solid #ff4444 !important;
+  border-bottom: 2px solid #ff4444 !important;
   border-left: 2px solid #ff4444 !important;
   border-right: 2px solid #ff4444 !important;
   border-radius: 0 !important;
-  z-index: 30 !important;
+  z-index: 41 !important;
 }
   .discard-pile .mini-card {
     width: 28px !important;
