--- a/battle.html
+++ b/battle.html
@@ -675,11 +675,11 @@ html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monosp
   /* Allow scrolling on mobile */
 
   .discard-pile {
-  position: fixed !important;
-  bottom: 0px !important; /* Sits on top of log */
+  position: centre !important;
+  bottom: -200px !important; /* Sits on top of log */
   left: 0 !important;
   right: 0 !important;
-  width: 90% !important;
+  width: 99% !important;
   height: 70px !important;
   max-height: 70px !important;
   padding: 6px !important;
