--- a/battle.html
+++ b/battle.html
@@ -674,98 +674,124 @@ html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monosp
 @media (max-width: 768px) {
   /* Allow scrolling on mobile */
 
-  .discard-pile {
-  position: centre !important;
-  top: 600px !important; /* Sits on top of log */
-  left: 0 !important;
-  right: 0 !important;
-  width: 97% !important;
-  height: 70px !important;
-  max-height: 70px !important;
-  padding: 6px !important;
-  border-bottom: none !important;
-  border-top: 2px solid #ff4444 !important;
-  border-bottom: 2px solid #ff4444 !important;
-  border-left: 2px solid #ff4444 !important;
-  border-right: 2px solid #ff4444 !important;
-  border-radius: 0 !important;
-  z-index: 41 !important;
-}
-  .discard-pile .mini-card {
-    width: 28px !important;
-    height: 38px !important;
+ .bottom-panel {
+    display: flex;
+    flex-direction: row;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 150px; /* shared height for both sections */
+    z-index: 50;
+    background: #111; /* unified dark bg */
   }
+
+  .bottom-panel .battle-log,
+  .bottom-panel .discard-pile {
+    flex: 1;                
+    padding: 6px;
+    box-sizing: border-box;
+    overflow-y: auto;  /* scroll if content exceeds height */
+  }
+
+  /* Battle log styling */
+  .bottom-panel .battle-log {
+    font-size: 13px;         /* readable text size */
+    line-height: 1.3;
+    color: #eee;
+    border-right: 2px solid #444;
+    white-space: normal;
+    word-break: break-word;
+    display: -webkit-box;
+    -webkit-line-clamp: 10;  /* limit visible lines */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+
+  /* Discard pile styling */
+  .bottom-panel .discard-pile {
+    border-left: 2px solid #ff4444;
+    display: flex;
+    flex-wrap: wrap;         /* allow cards to wrap neatly */
+    align-content: flex-start;
+    justify-content: flex-start;
+    gap: 4px;
+  }
+
+  /* Mini-card sizing on mobile */
+  .bottom-panel .discard-pile .mini-card {
+    width: 24px;
+    height: 34px;
+    flex: 0 0 auto;
+  }
+
+  /* Keep general mobile adjustments */
   html, body { 
     overflow-y: auto !important; 
     overflow-x: hidden !important; 
   }
-  
-  /* Compact layout for mobile */
+
   .wrap { 
     padding: 8px !important; 
     height: auto !important; 
     min-height: 100vh !important;
   }
-  
+
   .title { font-size: 14px !important; }
-  
   .turn-indicator { 
     top: 10px !important; 
     font-size: 10px !important; 
     padding: 6px 12px !important;
   }
-  
+
   .arena { 
     gap: 8px !important; 
     padding: 8px !important;
     flex: none !important;
   }
-  
-  /* Mobile area layout */
+
   .area { 
     flex-direction: column !important; 
     gap: 8px !important; 
     padding: 8px !important;
   }
-  
+
   .player-info { 
     min-width: 120px !important; 
     order: -1 !important;
   }
-  
+
   .name { font-size: 11px !important; }
-  
+
   .hp-bar { 
     width: 120px !important; 
     height: 16px !important;
   }
-  
+
   .hp-segments { width: 90% !important; gap: 1px !important; }
   .seg { height: 12px !important; }
-  
-  /* Mobile slots */
+
   .slots { 
     flex-wrap: wrap !important; 
     gap: 6px !important; 
     justify-content: center !important;
   }
-  
+
   .slot { 
     width: 60px !important; 
     height: 85px !important;
   }
-  
+
   .slot .card { 
     width: 56px !important; 
     height: 78px !important;
   }
-  
+
   .card .stats { 
     font-size: 7px !important; 
     padding: 2px !important;
   }
-  
-  /* Mobile hand */
+
   .hand { 
     min-height: 90px !important; 
     gap: 6px !important;
@@ -1024,25 +1050,24 @@ html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monosp
           </div>
         </div>
       </div>  <!-- Close arena div -->
+<!-- Integrated log panel + Discard pile (wrapped for mobile layout) -->
+<div class="bottom-panel">
+  <div class="log" id="battleLog">
+    <div class="entry system">Battle ready – place cards to begin.</div>
+  </div>
 
-      <!-- Integrated log panel -->
-      <div class="log" id="battleLog">
-        <div class="entry system">Battle ready – place cards to begin.</div>
-      </div>
-    </div>  <!-- Close game-container div -->
+  <div class="discard-pile" id="discardPile">
+    <div class="title">💀 GRAVEYARD</div>
+    <div class="discarded-cards" id="discardedCards"></div>
+    <div class="count" id="discardCount">0 defeated</div>
+  </div>
+</div>
 
-    <!-- turn control panel -->
-    <div class="turn-panel" id="turnPanel">
-      <div class="btn" id="endTurnBtn">END TURN</div>
-    </div>
-  </div  <!-- Close wrap div -->
-  <!-- Discard pile -->
-    <div class="discard-pile" id="discardPile">
-      <div class="title">💀 GRAVEYARD</div>
-      <div class="discarded-cards" id="discardedCards"></div>
-      <div class="count" id="discardCount">0 defeated</div>
-    </div>
-
+<!-- turn control panel -->
+<div class="turn-panel" id="turnPanel">
+  <div class="btn" id="endTurnBtn">END TURN</div>
+</div>
+</div> <!-- Close wrap div -->
 <script>
 (function(){
   // config
