--- a/battle.html
+++ b/battle.html
@@ -672,58 +672,55 @@ html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monosp
 
 /* Mobile-specific overrides - only apply on mobile devices */
 @media (max-width: 768px) {
-  /* Allow scrolling on mobile */
-
- .bottom-panel {
+  /* Bottom panel sits fixed at the bottom of the screen */
+  .bottom-panel {
     display: flex;
     flex-direction: row;
     position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 150px; /* shared height for both sections */
-    z-index: 50;
-    background: #111; /* unified dark bg */
+    height: 150px;      /* adjust height as needed */
+    z-index: 999;
+    background: #111;   /* unified bg for both halves */
   }
 
-  .bottom-panel .battle-log,
+  /* Battle log and discard split 50/50 */
+  .bottom-panel .log,
   .bottom-panel .discard-pile {
     flex: 1;                
+    overflow-y: auto;       /* scroll inside if needed */
     padding: 6px;
     box-sizing: border-box;
-    overflow-y: auto;  /* scroll if content exceeds height */
   }
 
   /* Battle log styling */
-  .bottom-panel .battle-log {
-    font-size: 13px;         /* readable text size */
+  .bottom-panel .log {
+    border-right: 2px solid #444;
+    font-size: 13px;         /* readable */
     line-height: 1.3;
     color: #eee;
-    border-right: 2px solid #444;
     white-space: normal;
     word-break: break-word;
-    display: -webkit-box;
-    -webkit-line-clamp: 10;  /* limit visible lines */
-    -webkit-box-orient: vertical;
-    overflow: hidden;
   }
 
   /* Discard pile styling */
   .bottom-panel .discard-pile {
     border-left: 2px solid #ff4444;
     display: flex;
-    flex-wrap: wrap;         /* allow cards to wrap neatly */
+    flex-wrap: wrap;
     align-content: flex-start;
     justify-content: flex-start;
     gap: 4px;
   }
 
-  /* Mini-card sizing on mobile */
+  /* Mini-card size in discard pile */
   .bottom-panel .discard-pile .mini-card {
     width: 24px;
     height: 34px;
     flex: 0 0 auto;
   }
+
 
   /* Keep general mobile adjustments */
   html, body { 
@@ -800,8 +797,8 @@ html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monosp
   
   /* Mobile turn panel */
   .turn-panel { 
-    bottom: 10px !important; 
-    gap: 8px !important;
+  bottom: 160px !important; /* same height as .bottom-panel (150) + 10px gap */
+  gap: 8px !important;
   }
   
   .btn { 
