Add padding to .wrap class in battle.html

--- a/battle.html
+++ b/battle.html
@@ -723,8 +723,9 @@ html,body{height:100%;margin:0;font-family:'Press Start 2P','DotGothic16',monosp
     height: 34px;
     flex: 0 0 auto;
   }
-
-
+.wrap {
+    padding-bottom: 320px !important;
+  }
   /* Keep general mobile adjustments */
   html, body { 
     overflow-y: auto !important; 
