--- a/battle.html
+++ b/battle.html
@@ -164,7 +164,7 @@ html,body{
   position: relative;
   height: 120px;      /* match your card height */
   width: 100%;        /* fit to gameboard width */
-  overflow: hidden;   /* stop cards spilling outside */
+  overflow: visible;   /* stop cards spilling outside */
   display: flex;
   justify-content: center;
 }
