--- a/battle.html
+++ b/battle.html
@@ -167,6 +167,7 @@ html,body{
   overflow: visible;   /* stop cards spilling outside */
   display: flex;
   justify-content: center;
+  z-index: 10; /* keeps cards above nearby elements */
 }
 .hand .card:hover {
   transform: translateY(-10px) scale(1.1);
