--- a/battle.html
+++ b/battle.html
@@ -3045,8 +3045,8 @@ addTouchHoldListeners();
 }
 
 .wrap {
-  overflow-x: hidden;
-  overflow-y: auto;
+  overflow-x: hidden;   /* stop sideways scrollbars */
+  overflow-y: visible;  /* allow vertical expansion */
   position: relative;
 }
 </style>
