--- a/battle.html
+++ b/battle.html
@@ -2959,7 +2959,7 @@ function handleTouchEnd(e) {
 
 function expandCard(card) {
   // Prevent scrolling when expanded
-  document.body.style.overflow = 'hidden';
+  document.body.style.overflow = 'visible';
   
   // Create backdrop
   const backdrop = document.createElement('div');
