Change card overflow from hidden to visible

--- a/battle.html
+++ b/battle.html
@@ -177,7 +177,7 @@ html,body{
 }
   .hand .card {
   border-radius: 8px;
-  overflow: hidden; /* ensures image stays inside the rounded shape */
+  overflow: visible; /* ensures image stays inside the rounded shape */
   box-shadow: 0 2px 6px rgba(0,0,0,0.25);
   transition: transform 0.2s ease;
 }
