--- a/battle.html
+++ b/battle.html
@@ -1278,6 +1278,7 @@ function renderHand(side) {
 // allow cards to expand upward/out of the hand container
     handEl.style.overflowX = 'hidden';
     handEl.style.overflowY = 'visible';
+    handEl.style.position = 'relative';
     return;
   }
 
@@ -1319,6 +1320,7 @@ function renderHand(side) {
 // allow cards to expand upward/out of the hand container
     handEl.style.overflowX = 'hidden';
     handEl.style.overflowY = 'visible';
+    handEl.style.position = 'relative';
   }
 }
   function createCardBackEl(){
